Fix the example

--- a/src/example.html
+++ b/src/example.html
@@ -68,8 +68,8 @@
       const paths = document.getElementById("paths");
 
       const connections = [
-        { boxA: "box1", boxB: "box2" },
-        { boxA: "box2", boxB: "box3" },
+        { boxA: "#box1", boxB: "#box2" },
+        { boxA: "#box2", boxB: "#box3" },
       ];
 
       new CurvlyConfig({ connections, paths });
